# rksuid

./: .travis.yml  Cargo.toml  LICENSE  README.md
benches/: rksuid_criterion.rs
docs/: index.html
docs/criterion/deserialize/base/: benchmark.json  estimates.json  sample.json  tukey.json
docs/criterion/deserialize/change/: estimates.json
docs/criterion/deserialize/deserialize/base/: estimates.json  raw.csv  sample.json  tukey.json
docs/criterion/deserialize/deserialize/change/: estimates.json
docs/criterion/deserialize/deserialize/new/: benchmark.json  estimates.json  raw.csv  tukey.json
docs/criterion/deserialize/deserialize/report/: index.html
docs/criterion/deserialize/new/: raw.csv
docs/criterion/gen_payloads/chacha/base/: benchmark.json  estimates.json
docs/criterion/gen_payloads/chacha/change/: estimates.json
docs/criterion/gen_payloads/chacha/new/: raw.csv  sample.json  tukey.json
docs/criterion/gen_payloads/chacha/report/: index.html
docs/criterion/gen_payloads/chacha12/base/: benchmark.json  raw.csv  sample.json
docs/criterion/gen_payloads/chacha12/change/: estimates.json
docs/criterion/gen_payloads/chacha12/new/: estimates.json  tukey.json
docs/criterion/gen_payloads/chacha12/report/: index.html
docs/criterion/gen_payloads/chacha8/base/: estimates.json  sample.json
docs/criterion/gen_payloads/chacha8/change/: estimates.json
docs/criterion/gen_payloads/chacha8/new/: benchmark.json  raw.csv  tukey.json
docs/criterion/gen_payloads/chacha8/report/: index.html
docs/criterion/gen_payloads/core/base/: benchmark.json  raw.csv  sample.json  tukey.json
docs/criterion/gen_payloads/core/change/: estimates.json
docs/criterion/gen_payloads/core/new/: estimates.json
docs/criterion/gen_payloads/core/report/: index.html
docs/criterion/gen_payloads/hyper/new/: raw.csv  (+3 more)
docs/criterion/gen_payloads/report/: index.html
docs/criterion/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
docs/criterion/new/report/: index.html
docs/criterion/report/: index.html
docs/criterion/serialize/base/: estimates.json  raw.csv  sample.json
docs/criterion/serialize/change/: estimates.json
docs/criterion/serialize/new/: benchmark.json  tukey.json
docs/criterion/sort/report/: index.html
docs/criterion/sort_unstable/report/: index.html
src/: .travis.yml  lib.rs
tests/: compat.rs  new.rs  props.rs  serialize.rs  sorting.rs
(+450 files in other folders)
