[package]
name = "rksuid"
version = "0.4.0"
authors = ["nharring@gmail.com"]
edition = "2018"
description="Rust implementation of the Segment.io KSUID format"
repository="https://github.com/nharring/rksuid"
readme="README.md"
license="MIT"
keywords=["ksuid", "uuid"]


[badges]
travis-ci = {repository="nharring/rksuid", branch="master"}
codecov = { repository = "nharring/rksuid", branch = "master", service = "github" }
maintenance = {status="actively-developed"}

[dependencies]
base-encode = "0.3.0"
rand = "0.8.5"
rand_core = "0.6.3"
chrono = "0.4"
arrayref = "0.3.5"
rand_pcg = "0.3.1"
strum = "0.24.0"
strum_macros = "0.24.0"

[dev-dependencies]
criterion = "0.3"
ksuid = "0.2.0"

[[bench]]
name = "rksuid_criterion"
harness = false
