[package]
name = "rksuid"
version = "0.5.0"
authors = ["nharring@gmail.com"]
edition = "2021"
description = "Rust implementation of the Segment.io KSUID format"
repository = "https://github.com/nharring/rksuid"
readme = "README.md"
license = "MIT"
keywords = ["ksuid", "uuid"]


[badges]
travis-ci = { repository = "nharring/rksuid", branch = "master" }
codecov = { repository = "nharring/rksuid", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
arrayref = "0.3.6"
base-encode = "0.3.1"
chrono = "0.4"
lazy_static = "1.4"
rand = "0.8.5"
rand_core = "0.6.3"
rand_pcg = "0.3.1"
strum = "0.24.0"
strum_macros = "0.24.0"

[dev-dependencies]
criterion = "0.3"
ksuid = "0.2.0"

[[bench]]
name = "rksuid_criterion"
harness = false
